# subbake-rust

./: .gitignore  ARCHITECTURE_AUDIT.md  ARCHITECTURE_REVIEW.md  Cargo.toml  README.md  sample.srt
crates/subbake-adapters/: Cargo.toml
crates/subbake-adapters/src/: config.rs  diagnostics.rs  editing.rs  embedded_subtitles.rs  error.rs  fs.rs  lib.rs  llm_backends.rs  mock.rs  overnight.rs  pipeline.rs  process.rs  providers.rs  runtime.rs  runtime_store.rs  settings.rs  transcription.rs  translation.rs  whisper.rs
crates/subbake-adapters/src/llm_backends/: native.rs  transport.rs
crates/subbake-adapters/src/llm_backends/protocols/: anthropic.rs  gemini.rs  mod.rs  openai_chat.rs  openai_responses.rs
crates/subbake-agent/: Cargo.toml
crates/subbake-agent/src/: decision.rs  discovery.rs  engine.rs  error.rs  event.rs  guard.rs  input_editor.rs  lib.rs  patch.rs  plan_coordinator.rs  presentation.rs  profile_coordinator.rs  session.rs  session_controller.rs  tool_execution.rs  tool_runner.rs  tools.rs  tui.rs  tui_state.rs  undo.rs
crates/subbake-agent/src/decision/: intent.rs  model.rs  prompts.rs
crates/subbake-agent/src/tui/: history.rs  input_router.rs  progress.rs  protocol.rs  render.rs  terminal.rs  worker.rs
crates/subbake-agent/tests/: real_pty.rs
crates/subbake-cli/: Cargo.toml
crates/subbake-cli/src/: args.rs  error.rs  lib.rs  main.rs  output.rs  progress.rs
crates/subbake-cli/src/commands/: agent.rs  evaluate.rs  mod.rs  overnight.rs  pipeline.rs  provider.rs  runtime.rs  stub.rs  transcribe.rs  translate.rs  whisper.rs
crates/subbake-cli/tests/: cli_shape.rs
crates/subbake-core/: Cargo.toml
crates/subbake-core/src/: cancellation.rs  diagnostics.rs  editing.rs  entities.rs  error.rs  evaluation.rs  languages.rs  lib.rs  memory.rs  overnight.rs  pipeline.rs  ports.rs  progress.rs  recovery.rs  review.rs  storage.rs  tool_outcome.rs  validation.rs
crates/subbake-core/src/formats/: mod.rs  srt.rs  txt.rs  vtt.rs
crates/subbake-core/src/pipeline/: persistence.rs  planning.rs  review_runner.rs  review_stage.rs  support.rs  terminology.rs  translation_runner.rs  translation_stage.rs
crates/subbake-core/tests/: golden_formats.rs
