[workspace]
members = [
  "crates/subbake-core",
  "crates/subbake-adapters",
  "crates/subbake-agent",
  "crates/subbake-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha"
edition = "2024"
license = "MIT"
authors = ["azote <231880175@smail.nju.edu.cn>"]
repository = "https://github.com/heyifan142857/subbake-rust"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
