[package]
name = "subbake-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subbake-core = { path = "../subbake-core" }

[lints]
workspace = true
