[package]
name = "subbake-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crossterm = "0.28"
ratatui = { version = "0.29", features = ["scrolling-regions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subbake-adapters = { path = "../subbake-adapters" }
subbake-core = { path = "../subbake-core" }
unicode-width = "0.2"
unicode-segmentation = "1.12"
thiserror = "2"

[lints]
workspace = true
